fix horizontal scroll error

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,10 @@
 @import "documents-pages";
 @import "ward-page";
 
+main {
+    overflow-x: hidden;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: $text-color-dark;
@@ -128,12 +132,13 @@ body::-webkit-scrollbar-thumb:hover {
     padding: 14px;
     border: 1px solid $background-color;
     background-color: white;
-    text-align:center;
-    position:fixed;
+    text-align: center;
+    position: fixed;
     bottom: 2em; /* отступ кнопки от нижнего края страницы*/
     right: 20px;
-    cursor:pointer;
-    display:none;
+    cursor: pointer;
+    display: none;
+    z-index: 3;
     &:hover {
         color: white;
         background-color: $background-color;
